--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
   },
   "resolutions": {
     "usehooks-ts@^2.7.2": "patch:usehooks-ts@npm:^2.7.2#./.yarn/patches/usehooks-ts-npm-2.7.2-fceffe0e43.patch"
+  },
+  "dependencies": {
+    "@axiom-crypto/core": "^0.3.6",
+    "nodejs": "0.0.0"
   }
 }
